[Task3] add UI styles

--- a/src/components/container/Container.css
+++ b/src/components/container/Container.css
@@ -1,5 +1,5 @@
-.nav {
+.header-container {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
-    background: #232323;
 }
