--- a/src/components/filter/Filter.css
+++ b/src/components/filter/Filter.css
@@ -2,6 +2,7 @@
     display: flex;
     background: #232323;
     margin-bottom: 0;
+    margin-top: 10px;
   }
   
   .filter-item {
@@ -9,7 +10,7 @@
     font-family: Montserrat;
     font-style: normal;
     font-weight: 500;
-    font-size: 16px;
+    font-size: 20px;
     line-height: 20px;
     text-transform: uppercase;
 
