--- a/src/components/add-movie-button/AddMovieButton.css
+++ b/src/components/add-movie-button/AddMovieButton.css
@@ -1,19 +1,13 @@
 .addMovie {
-    position: absolute;
-    height: 24px;
-    left: 10.17%;
-    right: 10.17%;
-    top: calc(50% - 24px/2);
-    
+    padding: 10px;
+    width: 200px;
     font-family: Montserrat;
-    font-style: normal;
-    font-weight: 600;
     font-size: 20px;
     line-height: 24px;
-    text-align: right;
     text-transform: uppercase;
-    
+    margin: 25px 45px 0 0;
     color: #F65261;
     background: rgba(96, 96, 96, 0.68);
     border-radius: 4px;
+    border-color: rgba(96, 96, 96, 0.68);
 }
