--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,9 +1,10 @@
 .header {
-    position: absolute;
+    display: flex;
+    flex-direction: column;
     width: 1200px;
     height: 396px;
-    left: 58px;
+    margin-bottom: 10px;
 
-    background: url(/public/header.png);
-    background-size: 1200px 396px;
+    background: url(/public/header.png) 100% 100% no-repeat;
+    background-size: cover;
 }
