--- a/src/components/logo/Logo.css
+++ b/src/components/logo/Logo.css
@@ -1,24 +1,18 @@
 .header-logo {
     height: 24px;
-    width: 151px;
     color: #F65261;
-    font-size: 20px;
+    font-size: 25px;
     font-weight: 500;
     line-height: 24px;
-    margin: 20px 0;
+    margin-top: 25px;
+    margin-left: 50px;
 }
 
 .footer-logo {
-    position: absolute;
-    height: 24px;
-    left: 44%;
-    right: 43.42%;
-    top: calc(50% - 24px/2);
-
     font-family: Montserrat;
     font-style: normal;
     font-weight: 900;
-    font-size: 20px;
+    font-size: 25px;
     line-height: 24px;
 
     color: #F65261;
