--- a/src/components/search/Search.css
+++ b/src/components/search/Search.css
@@ -1,17 +1,20 @@
+.find-movie-container {
+  margin-left: 120px;
+  margin-top: 10px;
+}
+
 .findmovie {
-    height: 49px;
-    width: 393px;
     color: #FFFFFF;
     font-size: 40px;
     font-weight: 300;
     letter-spacing: 1px;
     line-height: 49px;
-    margin: 100px 0 30px 0;
+    margin-bottom: 30px;
   }
   
   .searchButton {
     height: 57px;
-    width: 233px;
+    width: 230px;
     border-radius: 4px;
     background-color: #F65261;
     color: #FFFFFF;
@@ -19,11 +22,12 @@
     line-height:24px;
     text-align: center;
     text-transform: uppercase;
+    font-size: 20px;
   }
   
   .searchField {
     height: 57px;
-    width: 713px;
+    width: 700px;
     opacity: 0.7;
     border: 0;
     border-radius: 4px;
