[Task3] add active css class to the filter, without js logic

--- a/src/components/filter/Filter.css
+++ b/src/components/filter/Filter.css
@@ -20,3 +20,9 @@
   li {
     list-style-type: none;
   }
+
+  .active-item {
+    border-bottom-width: 2px;
+    border-color: #F65261;
+    border-bottom-style: solid;
+  }
