--- a/src/components/movie-card/MovieCard.module.css
+++ b/src/components/movie-card/MovieCard.module.css
@@ -2,11 +2,11 @@
     margin-bottom: 50px;
 }
 
-.card-body {
+.card_body {
   opacity: 0.6;
 }
 
-.card-img-top {
+.card_img_top {
   width: 319px;
   height: 507px;
   object-fit: contain;
@@ -29,22 +29,27 @@
 }
   
 /* MENU STYLES */
-#menu__toggle {
+.hamburger_menu {
+  position: absolute;
+  overflow: hidden;
+}
+
+.menu__toggle {
   opacity: 0;
 }
 
-#menu__toggle:checked ~ .menu__btn > span {
+.menu__toggle:checked ~ .menu__btn > span {
   transform: rotate(45deg);
 }
-#menu__toggle:checked ~ .menu__btn > span::before {
+.menu__toggle:checked ~ .menu__btn > span::before {
   top: 0;
   transform: rotate(0);
 }
-#menu__toggle:checked ~ .menu__btn > span::after {
+.menu__toggle:checked ~ .menu__btn > span::after {
   top: 0;
   transform: rotate(90deg);
 }
-#menu__toggle:checked ~ .menu__box {
+.menu__toggle:checked ~ .menu__box {
   visibility: visible;
   left: 0;
 }
@@ -87,21 +92,18 @@
 
 .menu__box {
   display: block;
-  position: fixed;
+  position: relative;
   visibility: hidden;
   top: 0;
   left: -100%;
-
-  width: 300px;
-  height: 100%;
-
+  padding: 0;
+  width: 150px;
+  height: 100px;
   margin: 0;
-  padding: 80px 0;
-
   list-style: none;
-
-  background-color: #ECEFF1;
-  box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+  background: rgba(35, 35, 35, 0.918051);
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1), 0px 2px 10px rgba(0, 0, 0, 0.1), 0px 10px 20px rgba(0, 0, 0, 0.1), 0px 10px 50px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(27.1828px);
 
   transition-duration: .25s;
 }
@@ -109,16 +111,17 @@
 .menu__item {
   display: block;
   padding: 12px 24px;
-
-  color: #333;
-
-  font-family: 'Roboto', sans-serif;
-  font-size: 20px;
   font-weight: 600;
-
   text-decoration: none;
-
   transition-duration: .25s;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 20px;
+  color: #FFFFFF;
+  mix-blend-mode: normal;
+  opacity: 0.8;
 }
 .menu__item:hover {
   background-color: #CFD8DC;
