--- a/src/components/filter/Filter.css
+++ b/src/components/filter/Filter.css
@@ -1,28 +1,32 @@
 .container {
-    display: flex;
-    background: #232323;
-    margin-bottom: 0;
-    margin-top: 10px;
-  }
-  
-  .filter-item {
-    margin: 0.8rem;
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 20px;
-    text-transform: uppercase;
+  display: flex;
+  background: #232323;
+  margin-bottom: 0;
+  margin-top: 10px;
+}
 
-    color: #FFFFFF;
-  }
+.filter-item {
+  margin: 0.8rem;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 20px;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #ffffff;
+}
 
-  li {
-    list-style-type: none;
-  }
+li {
+  list-style-type: none;
+}
 
-  .active-item {
-    border-bottom-width: 2px;
-    border-color: #F65261;
-    border-bottom-style: solid;
-  }
+.active-item {
+  border-bottom-width: 2px;
+  border-color: #f65261;
+  border-bottom-style: solid;
+}
+
+.selected {
+  color: #f65261;
+}
